<resources>
    <string name="app_name">My Application</string>
    <string name="welcome_message">Loding</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">게스트</string>
    <string name="nav_header_subtitle">로그인 해주세요</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="like">Like</string>
    <string name="unlike">Unlike</string>
    <string name="menu_home">홈</string>
    <string name="menu_community">커뮤니티</string>
    <string name="menu_sercenter">고객센터</string>
    <string name="menu_option">설정</string>
    <string name="menu_mypage">마이페이지</string>
    <string name="channel_name">Timer Channel</string>
    <string name="channel_description">Notification Channel for Timer</string>
    <string name="switch_alarm_text">공지사항 알람</string>
    <string name="intro_logo_desc">Intro Logo</string>
</resources>