<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_mypage"
            android:icon="@drawable/ic_menu_mypage"
            android:title="@string/menu_mypage" />

        <item
            android:id="@+id/nav_community"
            android:icon="@drawable/ic_menu_community"
            android:title="@string/menu_community" />
        <item
            android:id="@+id/nav_sercenter"
            android:icon="@drawable/ic_menu_sercenter"
            android:title="@string/menu_sercenter" />
        <item
            android:id="@+id/nav_option"
            android:icon="@drawable/ic_menu_option"
            android:title="@string/menu_option" />
    </group>
</menu>